--- a/ideia aplicativo jogo/projeto/app/src/main/res/values/strings.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/values/strings.xml
@@ -258,161 +258,162 @@
         <item>Maria</item>
         <item>Sara</item>
         <item>Suzany</item>
-        <item>Suzana</item>
+        <item>Mary</item>
         <item>Susana</item>
         <item>Sora</item>
-        <item>Daniela</item>
-        <item>Adriana</item>
-        <item>Gabriela</item>
-        <item>Patricia</item>
+        <item>Daniels</item>
+        <item>Illiana</item>
+        <item>Lily</item>
+        <item>Lilian</item>
         <item>Hinata</item>
-        <item>Renata</item>
-        <item>Úrsula</item>
-        <item>Ana</item>
-        <item>Anna</item>
-        <item>Ane</item>
-        <item>Anne</item>
-        <item>Layane</item>
-        <item>Rayane</item>
-        <item>Delaine</item>
-        <item>Linda</item>
-        <item>Inarai</item>
-        <item>Peróla</item>
+        <item>Amelia</item>
+        <item>Ilsa</item>
+        <item>Ilse</item>
+        <item>Rilsa</item>
+        <item>Emily</item>
+        <item>Ava</item>
+        <item>Isabella</item>
+        <item>Grace</item>
+        <item>Poppy</item>
+        <item>Ella</item>
+        <item>Evie</item>
+        <item>Charlotte</item>
         <item>Diana</item>
         <item>Dádiva</item>
-        <item>Julia</item>
-        <item>Joana</item>
-        <item>Diane</item>
+        <item>Jessica</item>
+        <item>Daisy</item>
+        <item>Sophie</item>
         <item>Dianna</item>
         <item>Dina</item>
         <item>Dianne</item>
-        <item>Dayane</item>
-        <item>Daiane</item>
+        <item>Day</item>
+        <item>Freya</item>
         <item>Sora</item>
         <item>Sana</item>
-        <item>Kanna</item>
-        <item>Niko</item>
-        <item>Aoi</item>
+        <item>Layla</item>
+        <item>Matilda</item>
+        <item>Rosie</item>
         <item>Yui</item>
-        <item>Ichika</item>
-        <item>Araki</item>
+        <item>Erin</item>
+        <item>Lola</item>
         <item>Himari</item>
-        <item>Kohana</item>
+        <item>Eliza</item>
         <item>Hana</item>
-        <item>Cládia</item>
-        <item>Cecília</item>
-        <item>Yidu</item>
-        <item>Yinru</item>
-        <item>Samanta</item>
-        <item>Samantha</item>
+        <item>Cladia</item>
+        <item>Elize</item>
+        <item>Bella</item>
+        <item>Imogen</item>
+        <item>Zara</item>
+        <item>Holly</item>
         <item>Mei</item>
         <item>Eva</item>
         <item>Rosa</item>
         <item>Julieta</item>
-        <item>Juliana</item>
-        <item>Francisca</item>
-        <item>Sophia</item>
-        <item>Sofia</item>
-        <item>Emma</item>
+        <item>Nancy</item>
         <item>Mila</item>
+        <item>Leah</item>
+        <item>Orla</item>
+        <item>Martha</item>
+        <item>Mia</item>
         <item>Marie</item>
         <item>Helena</item>
-        <item>Lena</item>
+        <item>Katie</item>
         <item>Lean</item>
-        <item>Paula</item>
+        <item>Arabella</item>
         <item>Lina</item>
-        <item>Paulina</item>
-        <item>Leticia</item>
-        <item>Glaucia</item>
-        <item>Margarethe</item>
+        <item>Niamh</item>
+        <item>Lacey</item>
+        <item>Aiyana</item>
+        <item>Zhoe</item>
         <item>Frieda</item>
         <item>Bertha</item>
         <item>Jasmin</item>
         <item>Yasmin</item>
-        <item>Tainá</item>
-        <item>Tânia</item>
+        <item>Clara</item>
+        <item>Cheyanne</item>
         <item>Tina</item>
-        <item>Pedrosa</item>
-        <item>Bete</item>
+        <item>Cheyenne</item>
+        <item>Citlali</item>
         <item>Frida</item>
-        <item>Mônica</item>
-        <item>Monique</item>
-        <item>Dominique</item>
-        <item>Penélope</item>
-        <item>Camila</item>
-        <item>Camilla</item>
+        <item>Munich</item>
+        <item>Kaydee</item>
+        <item>Kaydence</item>
+        <item>Nayeli</item>
+        <item>Winnie</item>
+        <item>Adsila</item>
         <item>Lisa</item>
         <item>Pietra</item>
-        <item>Salomé</item>
-        <item>Alice</item>
+        <item>Atotoztli</item>
+        <item>Aviaja</item>
         <item>Naomi</item>
         <item>Alicia</item>
         <item>Tia</item>
         <item>Iva</item>
-        <item>Ivone</item>
-        <item>Ivonete</item>
-        <item>Sandra</item>
+        <item>Awena</item>
+        <item>Awendea</item>
+        <item>Awendela</item>
         <item>Carmilla</item>
-        <item>Carmélia</item>
-        <item>Cornélia</item>
+        <item>Awinita</item>
+        <item>Ayita</item>
         <item>Evelyn</item>
         <item>Evelin</item>
-        <item>Christiane</item>
-        <item>Christina</item>
-        <item>Christine</item>
+        <item>Aylen</item>
+        <item>Behitha</item>
+        <item>Bena</item>
         <item>Christa</item>
-        <item>Karina</item>
+        <item>Brocky</item>
         <item>Yuriko</item>
-        <item>Mayumi</item>
+        <item>Calfuray</item>
         <item>Aya</item>
         <item>Ayasa</item>
         <item>Saya</item>
         <item>Kiyomi</item>
-        <item>Bruna</item>
-        <item>Jéssica</item>
+        <item>Chardon</item>
+        <item>Chenoa</item>
         <item>Angeline</item>
         <item>Angelina</item>
-        <item>Angelica</item>
-        <item>Angele</item>
-        <item>Angela</item>
-        <item>Magali</item>
-        <item>Flávia</item>
-        <item>Danila</item>
-        <item>Mirian</item>
-        <item>Nathália</item>
-        <item>Natalia</item>
-        <item>Thatiane</item>
-        <item>Luiza</item>
-        <item>Sônia</item>
+        <item>Chetanzi</item>
+        <item>Chiana</item>
+        <item>Chichimecacihuatzin</item>
+        <item>Chickoa</item>
+        <item>Chimalus</item>
+        <item>Cholena</item>
+        <item>Chumani</item>
+        <item>Chyanne</item>
+        <item>Citana</item>
+        <item>Dakoda</item>
+        <item>Dakota</item>
+        <item>Doba</item>
         <item>Sypha</item>
         <item>Luna</item>
-        <item>Itala</item>
+        <item>Sonia</item>
         <item>Gena</item>
-        <item>Geralda</item>
-        <item>Geraldete</item>
-        <item>Gorete</item>
-        <item>Luana</item>
+        <item>Dy</item>
+        <item>Elu</item>
+        <item>Enola</item>
+        <item>Esadowa</item>
         <item>Morgana</item>
-        <item>Fernanda</item>
-        <item>Vitória</item>
+        <item>Fala</item>
+        <item>Victoria</item>
         <item>Mikasa</item>
         <item>Gabi</item>
         <item>Sasha</item>
-        <item>Rosangela</item>
+        <item>Halona</item>
         <item>Rose</item>
         <item>Rosé</item>
         <item>Rode</item>
         <item>Lilith</item>
-        <item>Loura</item>
+        <item>Alita</item>
         <item>Alura</item>
         <item>Kara</item>
         <item>Ketlyn</item>
         <item>Annie</item>
-        <item>Cosma</item>
+        <item>Hoowanneka</item>
         <item>Flora</item>
-        <item>Florência</item>
-        <item>Fabiana</item>
-        <item>Hortência</item>
+        <item>Hokaratcha</item>
+        <item>Helki</item>
+        <item>Kabecka</item>
+        <!--segue abaixo-->
         <item>Gustava</item>
         <item>Lindinalva</item>
         <item>Antônia</item>
@@ -484,56 +485,62 @@
     </string-array>
 
     <string-array name="thingstodo">
-        <item>Jogar bola</item>
-        <item>Dormir</item>
-        <item>Passear</item>
-        <item>Cantar</item>
-        <item>Chorrar</item>
-        <item>Comer</item>
-        <item>Comprar</item>
-        <item>Conquistar</item>
-        <item>Beijar</item>
-        <item>Namorar</item>
-        <item>Ir ao shopping</item>
-        <item>Cochilar</item>
-        <item>Massagear</item>
-        <item>Jogar</item>
-        <item>Jogar vídeo game</item>
-        <item>Surfar</item>
-        <item>Nadar</item>
-        <item>Jogar basquete</item>
-        <item>Jogar vôlei</item>
-        <item>Bater</item>
-        <item>Conversar</item>
-        <item>Paquerar</item>
-        <item>Amar</item>
-        <item>Beber</item>
-        <item>Sair</item>
-        <item>Adoecer</item>
-        <item>Ler</item>
-        <item>Trabalhar</item>
-        <item>Estudar</item>
-        <item>Assistir</item>
-        <item>Admirar</item>
-        <item>Ajudar</item>
-        <item>Alimentar</item>
-        <item>Jantar</item>
-        <item>Almoçar</item>
-        <item>Tomar</item>
-        <item>Conquistar</item>
-        <item>Sonhar</item>
-        <item>Jogar baseball</item>
-        <item>Gritar</item>
-        <item>Mergulhar</item>
-        <item>Conhecer</item>
-        <item>Esquiar</item>
-        <item>Trollar</item>
-        <item>Brincar</item>
-        <item>Bagunçar</item>
-        <item>Organizar</item>
-        <item>Desenhar</item>
+        <item>play soccer</item>
+        <item>sleep</item>
+        <item>hang out</item>
+        <item>sing</item>
+        <item>cry</item>
+        <item>eat</item>
+        <item>buy</item>
+        <item>conquer</item>
+        <item>to kiss</item>
+        <item>to date</item>
+        <item>go to mall</item>
+        <item>to be sleepy</item>
+        <item>to massage</item>
+        <item>play</item>
+        <item>play video game</item>
+        <item>to surf</item>
+        <item>to swimming</item>
+        <item>to play basketball</item>
+        <item>to play volleyball</item>
+        <item>to slap</item>
+        <item>talk</item>
+        <item>flirting</item>
+        <item>to love</item>
+        <item>drink</item>
+        <item>leave</item>
+        <item>got sick</item>
+        <item>to read</item>
+        <item>to work</item>
+        <item>to study</item>
+        <item>to watch</item>
+        <item>to admire</item>
+        <item>to help</item>
+        <item>to feed</item>
+        <item>dinner</item>
+        <item>lunch</item>
+        <item>to take</item>
+        <item>to stable</item>
+        <item>to dream</item>
+        <item>to play baseball</item>
+        <item>to scream</item>
+        <item>to dive in</item>
+        <item>to meet</item>
+        <item>skiing</item>
+        <item>to troll</item>
+        <item>to joke</item>
+        <item>muss</item>
+        <item>organize</item>
+        <item>to draw</item>
     </string-array>
-
+    <string name="title_activity_menu">MenuActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
 
 
 </resources>
