--- a/ideia aplicativo jogo/projeto/app/src/main/res/values-ko-rKR/strings.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/values-ko-rKR/strings.xml
@@ -472,7 +472,7 @@
         <item>위</item>
         <item>심장</item>
         <item>간</item>
-        <item>Tripas</item>
+        <item>닭 내장</item>
         <item>머리</item>
         <item>피부</item>
         <item>발톱</item>
