--- a/ideia aplicativo jogo/projeto/app/src/main/res/values/strings.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
 
     <string name="a">aa</string>
 
+    <string name="sobre_texto">Aplicativo com finalizade de apresentação de trabalho de conclusão de curso na Universidade Estácio de Sá Polo Paraíso de São Paulo, para a obtenção do título de bacharel em Sistemas de Informação. A ideia deste aplicativo foi tornar uma brincadeira brasileira um jogo contemporâneo, eternizando uma brincadeira cultural.</string>
+
     <!--botões-->
 
     <string name="bt_share_text">Share</string>
@@ -542,6 +544,9 @@
     <string name="nav_header_subtitle">Developer: jonathansilva@daum.net</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
