--- a/ideia aplicativo jogo/projeto/app/src/main/res/values/strings.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/values/strings.xml
@@ -8,10 +8,11 @@
     <string name="titlechickenparts">Choose a chicen body part:</string>
     <string name="titlethingstodo">Choose something that you like to do:</string>
     <string name="menu">Menu</string>
+    <string name="genders">Which gender is applicable to your friend(s)?</string>
 
     <string name="a">aa</string>
 
-    <string name="sobre_texto">Aplicativo com finalizade de apresentação de trabalho de conclusão de curso na Universidade Estácio de Sá Polo Paraíso de São Paulo, para a obtenção do título de bacharel em Sistemas de Informação. A ideia deste aplicativo foi tornar uma brincadeira brasileira um jogo contemporâneo, eternizando uma brincadeira cultural.</string>
+    <string name="sobre_texto">Application for the purpose of presenting a final paper at the Estácio de Sá Polo Paraíso Universidade em São Paulo, to obtain a bachelor\'s degree in Information Systems. The idea of this application was to make a Brazilian game a contemporary game, perpetuating a cultural game.</string>
 
     <!--botões-->
 
@@ -537,16 +538,27 @@
         <item>to draw</item>
     </string-array>
 
-    <string name="title_activity_menu">I Chicken you</string>
+    <string name="title_activity_menu">I Chicken You</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Awesome App!</string>
     <string name="nav_header_subtitle">Developer: jonathansilva@daum.net</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="termos">Do you agree the rules below?</string>
+    <string name="aceito">I agree</string>
+    <string name="recuso">I refuse</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="therules">
+        <item>1 - Use this application for fun with your friend(s) or alone.</item>
+        <item>2 - The author and the legal owners don\'t responsible for the related actions of the end user.</item>
+        <item>3 - Don\'t plagiarize neither copy this project without consult the developer and, or the legal owners before, be creative and create your own project.</item>
+        <item>4 - Do not undermine the culture from which this project was based.</item>
+        <item>5 - Any suggestions that relate to the project should be commented on in the Google or Alphabet app store, which is currently known as Google Playstore.</item>
+        <item>6 - Any propaganda of the application is allowed provided it is not denigrate this app and his concept, either by propagation or by third parties.</item>
+        <item>7 - Remember yourself that any result of using this application is only a subtle kidding, without the proposition of any contrary or offensive idea.</item>
+        <item>8 - The end user is the unique and legal responsible for all results due have used in this application.</item>
+    </string-array>
 
 
 </resources>
